# medical-reasoning

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: usmle-assesment.xlsx
docs/: index.md
docs/samples/: medmcqa-wo-context.html  pubmedqa.html  usmle-valid.html
medical_reasoning/: run.py
medical_reasoning/configs/: config.yaml
medical_reasoning/configs/dataset/: base.yaml  headqa.yaml  medmcqa.yaml  medqa_tw.yaml  medqa_us.yaml  mmlu_usmle.yaml  pubmedqa.yaml
medical_reasoning/configs/flavor/: subset.yaml
medical_reasoning/configs/hydra/: default.yaml
medical_reasoning/configs/index/: base.yaml  composite.yaml  dpr.yaml  elasticsearch.yaml  multi.yaml  none.yaml
medical_reasoning/configs/index/corpus/: base.yaml  wiki.yaml  wiki_dpr.yaml  wiki_simple.yaml
medical_reasoning/configs/index/es_body/: default.yaml
medical_reasoning/configs/model/: ada.yaml  base.yaml  code.yaml  curie.yaml  davinci.yaml  davinci_one.yaml  davinci_three.yaml  dryrun.yaml
medical_reasoning/configs/model/config/: code.yaml  code2.yaml  code_sc.yaml  default.yaml
medical_reasoning/configs/model/stop/: contains_answer.yaml  none.yaml
medical_reasoning/configs/strategy/: empty.yaml  none.yaml  strat_10.yaml  strat_11.yaml  strat_12.yaml  strat_13.yaml  strat_15.yaml  strat_16.yaml  strat_17.yaml  strat_18.yaml  strat_19.yaml  strat_2.yaml  strat_20.yaml  strat_21.yaml  strat_22.yaml  strat_23.yaml  strat_24.yaml  strat_25.yaml  strat_26.yaml  strat_27.yaml  strat_28.yaml  strat_29.yaml  strat_3.yaml  strat_4.yaml  strat_5.yaml  strat_6.yaml  strat_7.yaml  strat_8.yaml  strat_9.yaml  strat__0.yaml  strat__1.yaml  strat__14.yaml  strat__22.yaml  strat_a.yaml  strat_b.yaml  strat_c.yaml  strat_d.yaml  strat_e.yaml  strat_f.yaml  strat_g.yaml  (+3 more)
medical_reasoning/configs/sys/: local.yaml  titan.yaml
medical_reasoning/configs/tokenizer/: gpt2.yaml
medical_reasoning/datasets/: builder.py  formatters.py  stats.py
medical_reasoning/datasets/builders/: medqa.py  mmlu_usmle.py  pubmedqa.py
medical_reasoning/datasets/utils/: split_pubmed.py
medical_reasoning/indexes/: __init__.py  base.py  composite.py  dpr.py  elasticsearch.py  multi.py
medical_reasoning/indexes/utils/: elasticsearch.py  generate_passages.py
medical_reasoning/models/: __init__.py  cache.py  reasoner.py  stop.py  templates.py  verifiers.py
medical_reasoning/models/functional/: infer_answer.py
medical_reasoning/utils/: config.py  datastruct.py  preprocessing.py
notebooks/: read-usmle-assesment.ipynb  strategies-duplicate.ipynb  strategies.ipynb
prompts/: usmle-medqa-5shot-prompt.txt
scripts/: accuracy_per_reasoning_length.py  accuracy_per_subject.py  find_combinations.py  generate_html.py  utils.py
scripts/templates/: showcase.html
site/: medmcqa.html
tests/: test_infer_answer.py  test_medical_reasoning.py
(+11 files in other folders)
